appinventor/appengine/war/static/css/Ya.css
/* ... */
.comment-meta {
  font-size: 12px;
  margin: 0 0 5px;
}
.comment-meta .comment-author {
  display: inline-block;
  font-size: 14px;
}
.comment-meta .comment-date {
  display: inline-block;
  margin-left: 5px;
  color: #999;
}
.comment-item .comment-text {
  font-size: 14px;
  font-weight: 300;
}



/* Gallery app actions related styles */
.gallery-app-details .app-actions {
  display: block;
  width: 100%;
}
.gallery-page-single .gwt-TabBar .gwt-TabBarItem-selected,
.gallery-app-single .gwt-TabBar .gwt-TabBarItem-selected {
  color: #b3c833;
  font-weight: 300;
}
.gallery-nav-return .gwt-Label,
.app-description,
.app-actions .gwt-TabPanelBottom .gwt-Label,
.app-info-container .primary-prompt,
.app-actions .primary-prompt {
  font-weight: 300;
  font-size: 14px;
  line-height: 1.75;
  color: #666;
}
.app-stats .primary-link {
  font-size: 12px;
}
.primary-link-small {
  color: #b3c833;
  border-bottom: 1px dotted #b3c833;
  font-weight: 300; font-size: 11.5px; line-height: 1.75;
}
.primary-link,
.moderator-link {
  color: #b3c833;
  border-bottom: 1px dotted #b3c833;
  font-weight: 300; font-size: 14px; line-height: 1.75;
}
.moderator-link {
  display:inline;
  margin-right:5px;
}
.ode-ProjectGalleryLink:hover,
.primary-link:hover,
.primary-link-small:hover,
.moderator-link:hover {
  background-color: #b3c833;
  color: white;
  cursor: pointer;
  width: auto;
}
.app-actions .action-button {
}
.app-actions .action-textarea {
  width: 99%;
  height: 75px;
  margin: 15px 0;
  -webkit-border-radius: 0;
  -moz-border-radius: 0;
  border-radius: 0;
}
.app-actions .action-textbox {
  width: 99%;
  margin: 15px 0;
  -webkit-border-radius: 0;
  -moz-border-radius: 0;
  border-radius: 0;
}

/* Moderation Page styles */
.all-reports {
  float: right;
}
.ode-ModerationTable {

}
.ode-ModerationTable .primary-link {
  color: black;
}
.inline-label{
  display:inline;
  margin-right:5px;
}

.time-label{
  display:inline;
  margin-right:15px;
  font-style:italic;
}
.seemore-link {
  color: #333399;
  border-bottom: 1px dotted #b3c833;
  font-weight: 300; font-size: 14px; line-height: 1.75;
  display:inline;
  margin-right:5px;
}

.seemore-link:hover {
  color: #980000;
  cursor: pointer;
  text-decoration:underline;
}


/* General gallery helper styles */
.message-popup {
  background-color: #fff;
  border: 1px solid lightgrey;
  padding: 20px;
}
.block {
  display: block;
}
.inline {
  display: inline;
}
.inline-block {
  display: inline-block;
}
.clearfix:after {
  content: ".";
  visibility: hidden;
  display: block;
  height: 0;
  clear: both;
}

/* Blocks editor */
.svg {
  width: 100%;
  height: 100%;
  overflow: hidden;
}

.ac-renderer {
  font: normal 13px Arial, sans-serif;
  position: absolute;
  background: #fff;
  border: 1px solid #666;
  -moz-box-shadow: 2px 2px 2px rgba(102, 102, 102, .4);
  -webkit-box-shadow: 2px 2px 2px rgba(102, 102, 102, .4);
  width: 300px;
  height: 294px;
  overflow: auto;
}
.ac-row {
  cursor: pointer;
  padding: .4em;
}
.ac-highlighted {
  font-weight: bold;
}
.ac-active {
  background-color: #b2b4bf;
}

.ai_type_block {
  position: absolute;
  z-index: 2000;
}

.goog-hsva-palette, .goog-hsva-palette-sm {
  border: 0;
}

div.vector-marker>svg, div.leaflet-marker-icon>img {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  padding: 2px;
}

div.dropdiv {
  position: fixed;
  z-index: 1000000;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  top: 0;
  left: 0;
  display: none;
  pointer-events: none;
}

div.dropdiv.good {
  background-color: rgba(128, 255, 128, 0.3);
  border: 8px dashed darkgreen;
  display: block;
}

div.dropdiv div {
  position: absolute;
  top: 50%;
  width: 100%;
  text-align: center;
  pointer-events: none;
}

div.dropdiv p {
  text-align: center;
  top: -15pt;
  font-size: 18pt;
  line-height: 30pt;
  color: darkgreen;
  margin: 0;
  position: relative;
}

.ya-Toolbar {
  display: flex;
  justify-content: space-between;
}

.ya-Toolbar .left {
  min-width: 220px;
  text-align: left;
}

.ya-Toolbar .right {
  flex-shrink: 0;
  text-align: right;
}

.ya-Toolbar .center {
  text-align: center;
  min-width: fit-content;
}

.ya-Toolbar>div>div {
  margin: 2px;
}

.ya-ProjectName {
  display: inline-block;
}

.download-button {
  display: grid !important;
  max-width: 130px;
  margin: 0 !important;
  margin-top: 12px !important;
  margin-left: -3px !important;
  height: 130px;
}

.download-icon {
  height: 110px;
  width: 110px;
  margin-left: auto;
  margin-right: auto;
}

.classic .download-barcode:before {
  content: "";
  background-color: #888;
  position: absolute;
  width: 1px;
  height: 160px;
  top: 40px;
  left: 50%;
  display: block;
}

.listItem:nth-child(2n + 0) {
  background: rgba(200, 200, 200, 0.1);
}

.components-tree-filter {
  margin-top: 1px;
  margin-left: 1px;
  font-size: 11px;
}

.ode-UserSettingsDialog .dialogContent {
  width: 768px;
}

.image-radio-group {
  display: flex;
  justify-content: space-between;
  width: 100%;
}

.image-radio {
  position: relative;
  text-align: center;
}

.hidden-radio {
  position: absolute;
  opacity: 0;
  width: 0;
  height: 0;
}

.image-label {
  display: flex;
  cursor: pointer;
  flex-direction: column;
  height: 100%;
}

.image-label img {
  box-sizing: border-box;
  width: 360px;
  object-fit: cover;
  border: 3px solid transparent;
  border-radius: 5px;
  transition: border-color 0.2s ease-in-out;
}

.hidden-radio:checked + div img {
  border-color: #7D9D36;
}

.image-label:hover img {
  border-color: #b3c833;
}

.hidden-radio:focus div + img {
  box-shadow: 0 0 0 2px rgba(186, 238, 86, 0.6);
}

.image-label > .gwt-Label {
  flex-grow: 1;
  align-content: flex-end;
}

@media(max-width: 768px) {
  .ode-UserSettingsDialog .dialogContent {
    width: 100%;
    max-width: 360px;
    flex-direction: column;
  }
  .image-radio-group {
    flex-direction: column;
  }
}

.popup {
  background-color: transparent;
  position: absolute;
}
/* ... */

